# wp-local

./: LICENSE  LOCAL.md  README.md  pyproject.toml
cli_anything/local/: README.md  __init__.py  __main__.py  local_cli.py
cli_anything/local/core/: session.py  site.py  wordpress.py
cli_anything/local/skills/: SKILL.md
cli_anything/local/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/local/utils/: graphql_backend.py  mysql_backend.py  wpcli_backend.py
